# server/src/controllers/user.controller.ts
@@ -9,7 +9,6 @@ import { OAuth2Client } from 'google-auth-library';
 @Tags('Users')
 @Route('/user')
 export class UserController extends Controller {
-
   private userService: UserService;
   private googleservice: OAuth2Client;
 
@@ -44,13 +43,15 @@ export class UserController extends Controller {
     @Body() user: IUser,
     @Res() unauthorized: TsoaResponse<401, { message: string }>
   ): Promise<IAccessTokenSuccess> {
-
     const userData = await UserModel.findOne({ username: user.username });
 
     if (userData) {
-      const isMatch = this.userService.comparePassword(user.password, userData.password);
+      const isMatch = this.userService.comparePassword(
+        user.password,
+        userData.password
+      );
 
-      if(!isMatch){
+      if (!isMatch) {
         unauthorized(401, {
           message: language.unauthorized,
         });
@@ -68,50 +69,50 @@ export class UserController extends Controller {
     });
   }
 
-  // @Post('/google-login')
-  // public async googleLogin(
-  //   @Body() user: IUser,
-  //   @Res() unauthorized: TsoaResponse<401, { message: string }>
-  // ): Promise<IAccessTokenSuccess> {
-      
-  //   const ticket = await this.googleservice.verifyIdToken({
-  //      user.googleId,
-  //      audience: process.env.GOOGLE_CLIENT_ID});
+  @Post('/google-login')
+  public async googleLogin(
+    @Body() user: any,
+    @Res() unauthorized: TsoaResponse<401, { message: string }>
+  ): Promise<IAccessTokenSuccess> {
+    const { tokenId } = user;
+    console.log('tokenId', tokenId);
+    const ticket = await this.googleservice.verifyIdToken({
+      idToken: tokenId,
+      audience: process.env.GOOGLE_CLIENT_ID,
+    });
+    console.log('ticket', ticket);
+    if (ticket.getPayload() && ticket.getPayload()?.email_verified) {
+      const email = ticket.getPayload()?.email;
+      const userData = await UserModel.findOne({ username: email });
 
-  //   if (ticket.getPayload() && ticket.getPayload()?.email_verified){
-  //     const email = ticket.getPayload()?.email;
-  //     const userData = await UserModel.findOne({username: email});
+      if (userData) {
+        const accessToken = this.userService.generateAccess(userData);
+        return {
+          user: userData,
+          accessToken,
+        };
+      } else {
+        const password = `${email}${process.env.JWT_SECRET}`;
+        user = new UserModel({ email, password });
 
-  //     if(userData){
-  //       const accessToken = this.userService.generateAccess(userData);
-  //       return {
-  //         user: userData,
-  //         accessToken,
-  //       }
-  //     }else{
-  //       const password = `${email}${process.env.JWT_SECRET}`
-  //         user = new UserModel({ email, password });
-  //         await UserModel.save((err, data) => {
-  //           if (err) {
-  //             console.log("ERROR GOOGLE LOGIN ON USER SAVE", err)
-  //             return {
-  //               error: "Google Login Failed"
-  //             }
-  //           }
-            
-  //           const accessToken = this.userService.generateAccess(userData);
-  //           return {
-  //             user: userData,
-  //             accessToken,
-  //           }
-      
-  //         })
-  //     }
-  //   }
+        await user.save((err, data) => {
+          if (err) {
+            console.log('ERROR GOOGLE LOGIN ON USER SAVE', err);
+            return {
+              error: 'Google Login Failed',
+            };
+          }
 
-  //   unauthorized(401, {
-  //     message: language.unauthorized,
-  //   });
-  // }
+          const accessToken = this.userService.generateAccess(data);
+          return {
+            user: data,
+            accessToken,
+          };
+        });
+      }
+    }
+    unauthorized(401, {
+      message: language.unauthorized,
+    });
+  }
 }
- 
